# entrepreneur-bench

./: IMPLEMENTATION_PLAN.md  README.md  phase1_prd_tdd.md  pyproject.toml  v0_1.md  v0_2.md  v0_4.md  v0_5.md
configs/experiments/: full_v06.yaml  minimax_m3_smoke.yaml  probe_minimax_inrun.yaml  test_deepseek_14d.yaml  validate_anchored_14d.yaml  vb_style_v1.yaml
docs/: index.html  report.html
docs/rl/: RL_M0_M0.5_IMPLEMENTATION_PLAN.md  RL_PRD.md  RL_TECHNICAL_DESIGN.md
docs/solvent/: solvent_three_phase_plan.md  v0_3.md
rl/artifacts/: m0_gate_status.md  throughput_smoke.md
rl/entrepreneur_bench/: __init__.py  environment.py  rewards.py  seeds.py  toy_env.py
rl/scripts/: run_m0_eval.sh  summarize_throughput.py
rl/tests/: test_rl_reward.py  test_throughput_summary.py
runs/: test-final.jsonl
runs/demo-v0_3/: manifest.json  seed-40-stub-naive-redteam-off.jsonl  seed-40-stub-naive-redteam-off.scorecard.json  seed-40-stub-naive-redteam-on.jsonl  (+38 more)
solvent/: __init__.py  characterize.py  cli_seed.py  demo.py  doctor.py  dotenv.py
solvent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_aggregate.py  test_business_time.py  test_characterize.py  test_cli.py  test_cli_demo_viewer.py  test_cli_score_compare.py  test_clock.py  test_context_manager.py  test_cost_estimate.py  test_data_clean.py  test_delivery_facts.py  test_delivery_menu.py  test_demo.py  test_dotenv.py  test_dynamic_scoring.py  test_env_episode.py  test_experiment_matrix.py  test_experiment_runner.py  test_extract.py  test_findings.py  test_generator_difficulty_reproducible.py  test_ledger.py  test_llm_harness.py  test_manipulation.py  test_market.py  test_market_stream.py  test_package_metadata.py  test_pricing_multimodel.py  test_provider_http.py  test_provider_reasoning.py  test_providers_schema.py  test_scoring_compare.py  test_scoring_optimal.py  test_scoring_scorecard.py  test_seed_split.py  test_stub_trace_compat.py  test_tool_adapter.py  test_trace_provenance.py  test_two_economies.py  test_v0_4b_dynamics.py  (+2 more)
(+365 files in other folders)
