[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "solvent"
version = "0.5.0"
description = "Deterministic freelance operation eval environment"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8"]
rl = ["verifiers==0.1.14; python_version >= '3.10' and python_version < '3.14'", "wandb", "openai"]

[project.scripts]
solvent = "solvent.cli.main:main"

[tool.setuptools.packages.find]
where = [".", "rl"]
include = ["solvent*", "entrepreneur_bench*"]

[tool.setuptools.package-data]
"solvent.viewer" = ["static/*"]
"solvent.delivery" = ["menu_data/*.json"]
"solvent" = ["configs/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests", "rl/tests"]
pythonpath = [".", "rl"]
